fix: footer icons center aligned

--- a/sass/site/layout/_footer.scss
+++ b/sass/site/layout/_footer.scss
@@ -41,6 +41,8 @@ footer.site-footer {
     }
 
     .footer-social {
+      text-align: center;
+
       a {
         color: lighten($color__grey, 10%);
         text-decoration: none;
